--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <img src="logo.png" alt="logo" id="logo">
-    <h1>Hello, I  <span id="name"> Shifra</span> your <span id="va"> vartual Assistent</span>
+    <h1>Hello, I  <span id="name"> Shifra</span> your <span id="va">Virtual Assistant</span>
     </h1>
     <img src="voice.gif" alt="voice" id="voice">
     <button id="btn"><img src="mic.svg" alt="mic"> <span id="content">Click here for talk to me</span></button>
